# autoresearch-tabular

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
examples/: README.md
examples/california-housing/: README.md  prepare.py
examples/diabetes/: README.md  prepare.py
examples/titanic/: README.md  prepare.py
