[project]
name = "autoresearch-tabular"
version = "0.0.1"
description = "Autonomous ML research for tabular datasets (classification + regression)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "matplotlib>=3.8.0",
]
